--- a/TenderInfo/Views/AuthorityInfo/Index.cshtml
+++ b/TenderInfo/Views/AuthorityInfo/Index.cshtml
@@ -118,14 +118,153 @@
 </div>
 <script>
     $(function () {
+        var queryParams = function (params) {
+            var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+                limit: params.limit,   //页面大小
+                offset: params.offset,  //页码
+                authorityName: $("#tbxAuthorityNameSearch").val(),
+                authorityType: $("#ddlAuthorityTypeSearch").val()
+            };
+            return temp;
+        };
+        var operateEvents = {
+            'click .edit': function (e, value, row, index) {
+                //alert('You click like action, row: ' + JSON.stringify(row));
+                //console.log(row.AuthorityID);
+                $("label.error").hide();
+                $(".error").removeClass("error");
+                $('#myModal').modal('show');
+                $("#modalTitle").text("编辑权限信息");
+                $("#AuthorityID").text(row.AuthorityID);
+                var args = { "id": row.AuthorityID };
+                $.post("/AuthorityInfo/GetOne", encodeURIComponent(JSON.stringify(args)), function (result) {
+                    $("#tbxName").val(result["AuthorityName"]);
+                    $("#ddlType").val(result["AuthorityType"]);
+                    $("#tbxDescribe").val(result["AuthorityDescribe"]);
+                    $("#tbxConflictCode").val(result["ConflictCode"]);
+                    $("#tbxMenuUrl").val(result["MenuUrl"]);
+                    $("#tbxMenuFatherName").val(result["MenuFatherID"]);
+                    $("#tbxMenuOrder").val(result["MenuOrder"]);
+                    $("#tbxMenuName").val(result["MenuName"]);
+                    $("#tbxMenuIcon").val(result["MenuIcon"]);
+                });
+            },
+            'click .remove': function (e, value, row, index) {
+                Ewin.confirm({ message: "确认要删除【" + row.AuthorityName + "】吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
+                    }
+                    //写服务器后台删除方法,成功后执行页面删除数据
+                    var args = { "id": row.AuthorityID };
+                    $.post("/AuthorityInfo/Del", encodeURIComponent(JSON.stringify(args)), function (result) {
+                        if (result == "ok") {
+                            //后台删除成功后，调用前台删除方法
+                            $('#bsTable').bootstrapTable('remove', {
+                                field: 'AuthorityID',
+                                values: [row.AuthorityID]
+                            });
+                            toastr.success("删除【" + row.AuthorityName + "】成功！", "提示")
+                        }
+                        else {
+                            toastr.error("保存错误，请联系5613877！", "提示");
+                        }
+                    });
 
-        //1.初始化Table
-        var oTable = new TableInit();
-        oTable.Init();
-
-        //2.初始化Button的点击事件
-        var oButtonInit = new ButtonInit();
-        oButtonInit.Init();
+                });
+            }
+        };
+        function operateFormatter(value, row, index) {
+            return [
+                '<a class="edit" href="javascript:void(0)" title="edit">',
+                '<i class="glyphicon glyphicon-pencil"></i>',
+                '</a>  ',
+                '<a class="remove" href="javascript:void(0)" title="Remove">',
+                '<i class="glyphicon glyphicon-trash"></i>',
+                '</a>'
+            ].join('&nbsp;&nbsp;');
+        }
+        var columns = [
+            {
+                checkbox: true
+            },
+            {
+                field: 'AuthorityID',
+                title: 'ID编号'
+            },
+            {
+                field: 'AuthorityName',
+                title: '权限名称'
+            },
+            {
+                field: 'AuthorityDescribe',
+                title: '权限描述'
+            },
+            {
+                field: 'AuthorityType',
+                title: '权限类型'
+            },
+            {
+                field: 'ConflictCode',
+                title: '权限互斥检测'
+            },
+            {
+                field: 'MenuUrl',
+                title: '菜单地址'
+            },
+            {
+                field: 'MenuOrder',
+                title: '菜单顺序码'
+            },
+            {
+                field: 'MenuFatherID',
+                title: '上级菜单ID'
+            },
+            {
+                field: 'MenuIcon',
+                title: '菜单图标'
+            },
+            {
+                field: 'MenuName',
+                title: '菜单名称'
+            },
+            {
+                field: 'operate',
+                title: '编辑&删除',
+                align: 'center',
+                events: operateEvents,
+                formatter: operateFormatter
+            }];
+        $('#bsTable').bootstrapTable({
+            url: '/AuthorityInfo/GetList',         //请求后台的URL（*）
+            contentType: 'application/x-www-form-urlencoded',
+            method: 'post',                     //请求方式（*）
+            toolbar: '#toolbar',                //工具按钮用哪个容器
+            striped: true,                      //是否显示行间隔色
+            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+            pagination: true,                   //是否显示分页（*）
+            sortable: false,                     //是否启用排序
+            sortOrder: "asc",                   //排序方式
+            queryParams: queryParams,//传递参数（*）
+            sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
+            pageNumber: 1,                       //初始化加载第一页，默认第一页
+            pageSize: 10,                       //每页的记录行数（*）
+            pageList: [10, 15, 20, 25],        //可供选择的每页的行数（*）
+            search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+            strictSearch: true,
+            showColumns: true,                  //是否显示所有的列
+            showRefresh: true,                  //是否显示刷新按钮
+            minimumCountColumns: 2,             //最少允许的列数
+            clickToSelect: false,                //是否启用点击选中行
+            //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            uniqueId: "AuthorityID",                     //每一行的唯一标识，一般为主键列
+            showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
+            cardView: false,                    //是否显示详细视图
+            detailView: false,                   //是否显示父子表
+            paginationPreText: "上一页",
+            paginationNextText: "下一页",
+            showExport: false,                     //是否显示导出
+            columns: columns
+        });
 
         $("#btnAdd").click(function () {
             clearInfo();
@@ -138,7 +277,9 @@
             $("label.error").hide();
             $(".error").removeClass("error");
         }
-
+        $("#btnSearch").click(function () {
+            $("#bsTable").bootstrapTable('refresh');
+        });
         $("#btnSubmit").click(function () {
             $("#formInfo").validate({
                 rules: {
@@ -241,174 +382,5 @@
             });
         });
     });
-
-    var TableInit = function () {
-        var oTableInit = new Object();
-        var columns = [
-            {
-                checkbox: true
-            },
-            {
-                field: 'AuthorityID',
-                title: 'ID编号'
-            },
-            {
-                field: 'AuthorityName',
-                title: '权限名称'
-            },
-            {
-                field: 'AuthorityDescribe',
-                title: '权限描述'
-            },
-            {
-                field: 'AuthorityType',
-                title: '权限类型'
-            },
-            {
-                field: 'ConflictCode',
-                title: '权限互斥检测'
-            },
-            {
-                field: 'MenuUrl',
-                title: '菜单地址'
-            },
-            {
-                field: 'MenuOrder',
-                title: '菜单顺序码'
-            },
-            {
-                field: 'MenuFatherID',
-                title: '上级菜单ID'
-            },
-            {
-                field: 'MenuIcon',
-                title: '菜单图标'
-            },
-            {
-                field: 'MenuName',
-                title: '菜单名称'
-            },
-            {
-                field: 'operate',
-                title: '编辑&删除',
-                align: 'center',
-                events: operateEvents,
-                formatter: operateFormatter
-            }];
-        //初始化Table
-        oTableInit.Init = function () {
-            $('#bsTable').bootstrapTable({
-                url: '/AuthorityInfo/GetList',         //请求后台的URL（*）
-                contentType: 'application/x-www-form-urlencoded',
-                method: 'post',                     //请求方式（*）
-                toolbar: '#toolbar',                //工具按钮用哪个容器
-                striped: true,                      //是否显示行间隔色
-                cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
-                pagination: true,                   //是否显示分页（*）
-                sortable: false,                     //是否启用排序
-                sortOrder: "asc",                   //排序方式
-                queryParams: oTableInit.queryParams,//传递参数（*）
-                sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
-                pageNumber: 1,                       //初始化加载第一页，默认第一页
-                pageSize: 10,                       //每页的记录行数（*）
-                pageList: [10, 15, 20, 25],        //可供选择的每页的行数（*）
-                search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
-                strictSearch: true,
-                showColumns: true,                  //是否显示所有的列
-                showRefresh: true,                  //是否显示刷新按钮
-                minimumCountColumns: 2,             //最少允许的列数
-                clickToSelect: false,                //是否启用点击选中行
-                height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
-                uniqueId: "AuthorityID",                     //每一行的唯一标识，一般为主键列
-                showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
-                cardView: false,                    //是否显示详细视图
-                detailView: false,                   //是否显示父子表
-                paginationPreText: "上一页",
-                paginationNextText: "下一页",
-                showExport: false,                     //是否显示导出
-                columns: columns
-            });
-        };
-
-        //得到查询的参数
-        oTableInit.queryParams = function (params) {
-            var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
-                limit: params.limit,   //页面大小
-                offset: params.offset,  //页码
-                authorityName: $("#tbxAuthorityNameSearch").val(),
-                authorityType: $("#ddlAuthorityTypeSearch").val()
-            };
-            return temp;
-        };
-        return oTableInit;
-    };
-    window.operateEvents = {
-        'click .edit': function (e, value, row, index) {
-            //alert('You click like action, row: ' + JSON.stringify(row));
-            //console.log(row.AuthorityID);
-            $("label.error").hide();
-            $(".error").removeClass("error");
-            $('#myModal').modal('show');
-            $("#modalTitle").text("编辑权限信息");
-            $("#AuthorityID").text(row.AuthorityID);
-            var args = { "id": row.AuthorityID };
-            $.post("/AuthorityInfo/GetOne", encodeURIComponent(JSON.stringify(args)), function (result) {
-                $("#tbxName").val(result["AuthorityName"]);
-                $("#ddlType").val(result["AuthorityType"]);
-                $("#tbxDescribe").val(result["AuthorityDescribe"]);
-                $("#tbxConflictCode").val(result["ConflictCode"]);
-                $("#tbxMenuUrl").val(result["MenuUrl"]);
-                $("#tbxMenuFatherName").val(result["MenuFatherID"]);
-                $("#tbxMenuOrder").val(result["MenuOrder"]);
-                $("#tbxMenuName").val(result["MenuName"]);
-                $("#tbxMenuIcon").val(result["MenuIcon"]);
-            });
-        },
-        'click .remove': function (e, value, row, index) {
-            Ewin.confirm({ message: "确认要删除【" + row.AuthorityName + "】吗？" }).on(function (e) {
-                if (!e) {
-                    return;
-                }
-                //写服务器后台删除方法,成功后执行页面删除数据
-                var args = { "id": row.AuthorityID };
-                $.post("/AuthorityInfo/Del", encodeURIComponent(JSON.stringify(args)), function (result) {
-                    if (result == "ok") {
-                        //后台删除成功后，调用前台删除方法
-                        $('#bsTable').bootstrapTable('remove', {
-                            field: 'AuthorityID',
-                            values: [row.AuthorityID]
-                        });
-                        toastr.success("删除【" + row.AuthorityName + "】成功！", "提示")
-                    }
-                    else {
-                        toastr.error("保存错误，请联系5613877！", "提示");
-                    }
-                });
-                
-            });
-        }
-    };
-    function operateFormatter(value, row, index) {
-        return [
-            '<a class="edit" href="javascript:void(0)" title="edit">',
-            '<i class="glyphicon glyphicon-pencil"></i>',
-            '</a>  ',
-            '<a class="remove" href="javascript:void(0)" title="Remove">',
-            '<i class="glyphicon glyphicon-trash"></i>',
-            '</a>'
-        ].join('&nbsp;&nbsp;');
-    }
-    var ButtonInit = function () {
-        var oInit = new Object();
-
-        oInit.Init = function () {
-            //初始化页面上面的按钮事件
-            $("#btnSearch").click(function () {
-                $("#bsTable").bootstrapTable('refresh');
-            });
-        };
-
-        return oInit;
-    };
 </script>
 
