--- a/TenderInfo/Views/Home/ErrorIE.cshtml
+++ b/TenderInfo/Views/Home/ErrorIE.cshtml
@@ -24,7 +24,7 @@
                 <h1>win7系统:<a class="btn btn-lg btn-default" href="http://10.61.120.56/list.asp?id=4783" target="_blank">Internet Explorer 11浏览器下载地址</a></h1>
                 <h1>win7系统:<a class="btn btn-lg btn-default" href="http://10.61.120.56/list.asp?id=3960" target="_blank">Google Chrome浏览器下载地址</a></h1>
                 <hr />
-                <a class="btn btn-primary btn-lg" href="~/Template/物资质量反馈系统使用说明（1.0）.pdf">物资质量反馈系统使用说明(1.0)</a>
+                @*<a class="btn btn-primary btn-lg" href="~/Template/物资质量反馈系统使用说明（1.0）.pdf">物资质量反馈系统使用说明(1.0)</a>*@
 
                 <hr />
                 <h1>请更换浏览器后重新登录系统！使用IE浏览器时，请关闭兼容模式！</h1>
