--- a/TenderInfo/Views/SampleDelegation/Input.cshtml
+++ b/TenderInfo/Views/SampleDelegation/Input.cshtml
@@ -170,6 +170,60 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="EditTenderDateModal">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h5 class="modal-title">修改招标开始时间</h5>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="form-horizontal" id="PanelEditTenderDate">
+                        <form id="EditTenderDateForm" method="post" enctype="multipart/form-data">
+                            <input id="EditTenderDateInfoID" name="EditTenderDateInfoID" class="hidden" type="text" />
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="callout callout-info">
+                                        <p>原招标开始时间</p>
+                                        <h4 id="lblOldTenderStartDate"></h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="tbxEditTenderDate">修改招标开始时间<span class="text-danger">(必填)</span></label>
+                                        <input type="text" class="form-control" id="tbxEditTenderDate" name="tbxEditTenderDate" placeholder="修改招标开始时间">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div id="editLog">
+                        <table class="table table-condensed table-hover">
+                            <thead>
+                                <tr>
+                                    <th>序号</th>
+                                    <th>操作人</th>
+                                    <th>操作时间</th>
+                                    <th>内容</th>
+                                </tr>
+                            </thead>
+                            <tbody id="editTenderDateLogTable"></tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" id="btnEditTenderDateSubmit" class="btn btn-primary">
+                        <i class="glyphicon glyphicon-ok"></i> 提交
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="box box-danger">
     <div class="box-header">
         <h3 class="box-title">样品检测信息录入</h3>
@@ -236,7 +290,7 @@
             $(".error").removeClass("error");
         }
 
-        $("#tbxStartTenderDate").datetimepicker({
+        $("#tbxStartTenderDate,#tbxEditTenderDate").datetimepicker({
             language: 'zh-CN',
             weekStart: 1,
             todayBtn: 1,
@@ -278,6 +332,13 @@
         var validCheckReport = $("#CheckReportForm").validate({
             rules: {
                 checkReportFile: { required: true }
+            }
+        });
+
+        //对EditTenderDate表单进行前端验证
+        var validCheckReport = $("#EditTenderDateForm").validate({
+            rules: {
+                tbxEditTenderDate: { required: true }
             }
         });
 
@@ -351,6 +412,34 @@
                             success: function (result) {
                                 if (result.state == "ok") {
                                     $("#CheckReportModal").modal("hide");
+                                    toastr.success("操作成功！", "提示");
+                                    $("#bsTable").bootstrapTable('refresh');
+                                }
+                            },
+                            error: function (error) {
+                                toastr.error(error, "提示");
+                                return;
+                            }
+                        });
+                    }
+                });
+            };
+        });
+
+        //修改招标开始时间提交按钮
+        $("#btnEditTenderDateSubmit").click(function () {
+            if (validCheckReport.form()) {
+                Ewin.confirm({ message: "确定要提交吗？" }).on(function (e) {
+                    if (!e) {
+                        return;
+                    }
+                    else {
+                        $("#EditTenderDateForm").ajaxSubmit({
+                            url: "/SampleDelegation/EditTenderStartDate",
+                            type: "post",
+                            success: function (result) {
+                                if (result.state == "ok") {
+                                    $("#EditTenderDateModal").modal("hide");
                                     toastr.success("操作成功！", "提示");
                                     $("#bsTable").bootstrapTable('refresh');
                                 }
