--- a/TenderInfo/Views/ProgressInfo/SearchInfoMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/SearchInfoMaterial.cshtml
@@ -3,8 +3,8 @@
     <div class="col-md-12">
         <div class="form-inline">
             <div class="form-group">
-                <label for="tbxSampleNameSearch">类型：</label>
-                <select id="ddlProjectResponsiblePersonSearch" class="form-control">
+                <label for="ddlProgressTypeChildSearch">类型：</label>
+                <select id="ddlProgressTypeChildSearch" class="form-control">
                     <option value="化工三剂" selected>化工三剂</option>
                     <option value="动设备">动设备</option>
                     <option value="静设备">静设备</option>
