--- a/TenderInfo/Views/SampleDelegation/Input.cshtml
+++ b/TenderInfo/Views/SampleDelegation/Input.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "样品检测信息录入";
+    ViewBag.Title = "招标样品检测信息管理";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="modal fade" id="FirstCodeModal">
@@ -226,7 +226,7 @@
 </div>
 <div class="box box-danger">
     <div class="box-header">
-        <h3 class="box-title">样品检测信息录入</h3>
+        <h3 class="box-title">招标样品检测信息管理</h3>
         <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="" data-original-title="collapse">
                 <i class="fa fa-minus"></i>
